--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "predis/predis": "^1.0",
         "vinkla/pusher": "^2.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "doctrine/dbal":"*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
