--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "predis/predis": "^1.0",
         "vinkla/pusher": "^2.0",
         "intervention/image": "^2.3",
-        "doctrine/dbal":"*"
+        "doctrine/dbal":"*",
+        "barryvdh/laravel-debugbar": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
