--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "jquery-ui": "*",
     "moment": "*",
       "jquery.inputmask": "*",
-      "angular-xeditable": "*"
+      "angular-xeditable": "*",
+      "ngprogress": "*"
   }
 }
