--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 #add for me
 /public/node_modules
 /public/vendor
-/public/report
-#/public/images/employees
-#/public/images/products
-#/public/images/users
-#/public/images/variants
+#/public/report/*
+/public/images/employees/*
+/public/images/products/*
+/public/images/users/*
+/public/images/variants/*
 /.idea
 # .add
 Homestead.yaml
