--- a/public/bower.json
+++ b/public/bower.json
@@ -4,7 +4,7 @@
   "description": "Sales and Inventory Software",
   "dependencies": {
     "angular": "~1.3.2",
-    "adminlte": "^2.0",
+    "adminlte": "~2.1.2",
     "moment": "~2.8.3",
     "angular-route": "~1.3.2",
     "angular-sanitize": "~1.3.2",
