--- a/public/bower.json
+++ b/public/bower.json
@@ -22,6 +22,10 @@
     "jquery.inputmask": "*",
     "angular-xeditable": "*",
     "ngprogress": "*",
-    "angular-ui-slider":"*"
+    "angular-ui-slider":"*",
+    "jspdf":"*",
+    "html2canvas":"*",
+    "semantic":"*",
+    "semantic-ui":"*"
   }
 }
